--- a/Proto/.gitignore
+++ b/Proto/.gitignore
@@ -7,6 +7,7 @@
 # User-specific stuff:
 .idea/.idea.Proto/.idea/workspace.xml
 .idea/.idea.Proto/.idea/tasks.xml
+.idea/.idea.Proto/.idea/terminal.xml
 
 # Sensitive or high-churn files:
 .idea/.idea.Proto/.idea/dataSources/
