Fuck off Editor meta

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,7 @@ sysinfo.txt
 *.unitypackage
 
 Proto/Assets/Plugins/Editor/JetBrains/
+
+Proto/Assets/Plugins/Editor/
+
+Proto/Assets/Plugins/Editor\.meta
